commit desde VScode

--- a/hellow_word.html
+++ b/hellow_word.html
@@ -6,7 +6,7 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Sitio web cool</h1>
+    <h1>Sitio web profeional</h1>
     <p>Saludos people</p>
     <p>el curso esta bien</p>
 </body>
